[package]
name = "qiankun-node"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]

clap = { version = "4.5.4", features = ["derive"] }

# runtime
runtime = { package = "qiankun-runtime", path = "../runtime" }

# primitives
sp-timestamp = "31.0.0"
sp-io = "35.0.0"

# core client
sc-cli = "0.41.0"
sc-service = "0.40.0"
sc-executor = "0.37.0"
sc-transaction-pool = "33.0.0"
sc-telemetry = "19.0.0"
sc-consensus = "0.38.0"
sc-consensus-grandpa = "0.24.0"
sc-consensus-aura = "0.39.0"
sc-consensus-manual-seal = "0.40.0"

[build-dependencies]
substrate-build-script-utils = "11.0.0"

[features]
default = []
