[package]
name = "qiankun-node"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = { version = "0.3.30", features = ["thread-pool"] }
futures-timer = "3.0.1"
jsonrpsee = { version = "0.22", features = ["server"] }
serde_json = "1.0.114"
bounded-collections = "0.2.0"


# runtime
runtime = { package = "qiankun-runtime", path = "../runtime" }

# substrate utils
substrate-frame-rpc-system = "33.0.0"


# primitives
sp-timestamp = "31.0.0"
sp-io = "35.0.0"
sp-runtime = "36.0.0"
sp-api = "31.0.0"
sp-blockchain = "33.0.0"
sp-block-builder = "31.0.0"
sp-keyring = "36.0.0"


# core client
sc-cli = "0.41.0"
sc-service = "0.40.0"
sc-executor = "0.37.0"
sc-transaction-pool = "33.0.0"
sc-transaction-pool-api = "33.0.0"
sc-telemetry = "19.0.0"
sc-consensus = "0.38.0"
sc-consensus-grandpa = "0.24.0"
sc-consensus-aura = "0.39.0"
sc-consensus-manual-seal = "0.40.0"
sc-network = "0.39.0"
sc-offchain = "34.0.0"
sc-client-api = "33.0.0"
sc-rpc-api = "0.38.0"
sc-basic-authorship = "0.39.0"

[build-dependencies]
substrate-build-script-utils = "11.0.0"

[features]
default = []
