[package]
name = "qiankun-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
parity-scale-codec = { version = "3.6.9", default-features = false }
scale-info = { version = "2.11.2", default-features = false }

# frame
frame = { package = "polkadot-sdk-frame", git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, features = [
    "experimental",
    "runtime",
] }

# frame pallets
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }

# primitives
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, features = [
    "serde",
] }


[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", optional = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",

    "frame/std",

    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-sudo/std",

    "sp-runtime/std",
    "sp-genesis-builder/std",

    "substrate-wasm-builder",
]
