[package]
name = "qiankun-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
parity-scale-codec = { version = "3.6.9", default-features = false }
scale-info = { version = "2.11.2", default-features = false }

# frame
frame-support = { version = "33.0.0", default-features = false, features = [
    "experimental",
] }
frame-system = { version = "33.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "31.0.0", default-features = false }
frame-executive = { version = "33.0.0", default-features = false }

# frame pallets
pallet-transaction-payment = { version = "33.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "33.0.0", default-features = false }
pallet-balances = { version = "34.0.0", default-features = false }
pallet-timestamp = { version = "32.0.0", default-features = false }
pallet-sudo = { version = "33.0.0", default-features = false }

# primitives
sp-core = { version = "32.0.0", default-features = false, features = ["serde"] }
sp-api = { version = "31.0.0", default-features = false }
sp-runtime = { version = "36.0.0", default-features = false, features = [
    "serde",
] }
sp-version = { version = "34.0.0", default-features = false, features = [
    "serde",
] }
sp-std = { version = "14.0.0", default-features = false }
sp-block-builder = { version = "31.0.0", default-features = false }
sp-inherents = { version = "31.0.0", default-features = false }
sp-transaction-pool = { version = "31.0.0", default-features = false }
sp-offchain = { version = "31.0.0", default-features = false }
sp-session = { version = "32.0.0", default-features = false }
sp-weights = { version = "31.0.0", default-features = false }
sp-genesis-builder = { version = "0.12.0", default-features = false }


[build-dependencies]
substrate-wasm-builder = { version = "22.0.0", optional = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",

    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "frame-support/std",
    "frame-executive/std",

    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-sudo/std",

    "sp-core/std",
    "sp-api/std",
    "sp-runtime/std",
    "sp-version/std",
    "sp-std/std",
    "sp-block-builder/std",
    "sp-inherents/std",
    "sp-transaction-pool/std",
    "sp-offchain/std",
    "sp-session/std",
    "sp-weights/std",
    "sp-genesis-builder/std",

    "substrate-wasm-builder",
]
